# Diplom

Practice_1/: a.out  main  main.cpp
Practice_1/cmake/: CMakeCache.txt  CMakeLists.txt  Diplom_Practice_1  Makefile  cmake_install.cmake  main.cpp
Practice_1/cmake/sources/: main.cpp
Practice_1/cmake/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
Practice_1/gradle/: main.cpp  settings.gradle.kts
Practice_1/gradle/src/test/cpp/: app_test.cpp
Practice_1/gradle_build/: settings.gradle.kts
Practice_1/gradle_build/src/main/swift/: main.swift  second_file.swift
Practice_1/make_build/: Makefile  main.swift  output
Practice_1/qmake/: qmake  qmake.pro
Practice_1/swift_build/: Package.swift  README.md
Practice_1/swift_build/Tests/: LinuxMain.swift
Practice_1/swift_build/Tests/swift_buildTests/: XCTestManifests.swift  swift_buildTests.swift
Practice_1/test_gradle/: build.gradle.kts  settings.gradle.kts
Practice_1/ubuntu/cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Practice_1/ubuntu/cmake/sources/: a.out  main.cpp  sort_test.cpp  sort_test.hpp
Practice_1/ubuntu/gradle/: build.gradle.kts
Practice_1/ubuntu/qmake/: .qmake.stash  Makefile  sort_test.cpp
forest/: test.ipynb
forest/.ipynb_checkpoints/: test-checkpoint.ipynb
forest/data1/: research.ipynb  second.ipynb
forest/data2/: Forest_fire_area_predict.ipynb
nm_tests/: a.out  main  main.cpp  main.swift
nm_tests/results/: main_cpp_cout_hello  main_cpp_print_hello  main_swift_class_A  main_swift_only_int_a  main_swift_print_hello  main_swift_struct_A
(+3 files in other folders)
